Fix: fixed the members alignment for mobile devices

--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -87,6 +87,7 @@ body {
             grid-auto-rows: minmax(250px, auto);
             gap: 2vw;
             justify-items: center;
+            justify-content: center;
             align-items: center;
             margin: 1vh 2vw;
         }
