--- a/src/components/Home/Member/style.scss
+++ b/src/components/Home/Member/style.scss
@@ -1,16 +1,17 @@
 @use "../../../Variables.scss" as *;
 
 .Member_Container {
+
     @media (max-width: 685px) {
-        width: 90%;
+        width: 87%;
         
         img {
-            margin-top: 1vh;
+            margin-top: 0vh;
             width: 65vw;
         }
     }
     @media (min-width: 685px) and (max-width: 1052px) {
-        width: 90%;
+        width: 85%;
         
         img {
             width: 32vw;
@@ -43,6 +44,10 @@
         flex-direction: column;
         gap: 1.8vw;
         align-items: center;
+        
+        @media screen and (max-width: 1040px) {
+            padding: 0 2vw;
+        }
     }
 
     img {
@@ -56,7 +61,7 @@
         font-weight: 400;
         line-height: 22px;
         @media (max-width: 1441px) {
-            font-size: clamp(0.8rem, 2vw, 1.1rem);
+            font-size: clamp(0.9rem, 2vw, 1.1rem);
         }
         @media (min-width: 1441px) {
             font-size: clamp(0.8rem, 3vw, 1.4rem);
